@@ -1,3 +1,9 @@
+2015-04-01  Eric Abrahamsen  <eric@ericabrahamsen.net>
+
+	* lisp/registry.el (registry-prune): Re-use `registry-full' in
+	`registry-prune'. It's a bit of redundant work, but safer. Also ensure
+	that target-size is an integer.
+
 2015-03-31  Daiki Ueno  <ueno@gnu.org>
 
 	* plstore.el (plstore--decrypt): Clear entry in
